# gws2

./: .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  config.example.toml  config.toml.example  set-version.sh
.github/workflows/: build.yml  clippy.yml
libgws/: Cargo.toml
libgws/src/: lib.rs
libgws/src/commands/: mod.rs  status.rs
libgws/src/config/data/: project.rs
src/: cli.yaml  crate_info.rs  lib.rs  main.rs
src/cli/: check.rs  clone.rs  exit_codes.rs  fetch.rs  ff.rs  main.rs  mod.rs  status.rs  update.rs
src/color/: palette.rs
src/commands/: check.rs  clone.rs  common.rs  error.rs  fetch.rs  ff.rs  mod.rs  status.rs  update.rs  version.rs
src/commands/common/: exit_codes.rs  mod.rs
src/config/: error.rs  legacy.rs  mod.rs  read.rs
src/config/data/: branch.rs  mod.rs  project.rs  remote.rs  user_config.rs  workspace.rs
src/config/parse/: legacy.rs
src/data/: status.rs
src/util/: git2.rs  iter.rs  mod.rs
tests/: add-ssh-key.sh  cli.rs  clone.rs  example_projects.gws  fetch.rs  ff.rs  id_rsa  id_rsa.pub  palette.rs  remove-ssh-key.sh  setup-mirror.sh  setup-workspace.sh  status.rs  test_projects.gws  update.rs
tests/util/: mod.rs
tests/util2/: mod.rs
