[package]
name = "gws"
version = "0.1.0"
authors = ["Emil Lundberg <emil@emlun.se>"]
edition = "2018"
description = "Colorful helper for workspaces of git repositories"
homepage = "https://github.com/emlun/gws2"
repository = "https://github.com/emlun/gws2"
readme = "README.md"
keywords = ["git", "workspace"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"

[dependencies]
ansi_term = "0.11"
clap = { version = "2.31" }
directories = "2.0"
git2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
assert_cmd = "0.11.1"
tempfile = "3.1"

[badges]
maintenance = { status = "experimental" }
is-it-maintained-issue-resolution = { repository = "https://github.com/emlun/gws2" }
is-it-maintained-open-issues = { repository = "https://github.com/emlun/gws2" }
travis-ci = { repository = "emlun/gws2" }
