[package]
name = "gws"
version = "0.1.0"
authors = ["Emil Lundberg <emil@emlun.se>"]
edition = "2018"
description = "Colorful helper for workspaces of git repositories"
homepage = "https://github.com/emlun/gws2"
repository = "https://github.com/emlun/gws2"
readme = "README.md"
keywords = ["git", "workspace"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"

[dependencies]
ansi_term = "0.12.1"
clap = "2.31"
directories = "5.0.1"
git2 = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
walkdir = "2.3.2"
glob = "0.3.1"
term_size = "0.3.2"

[dev-dependencies]
assert_cmd = "2.0.7"
tempfile = "3.3.0"

[badges]
maintenance = { status = "experimental" }
is-it-maintained-issue-resolution = { repository = "https://github.com/emlun/gws2" }
is-it-maintained-open-issues = { repository = "https://github.com/emlun/gws2" }
travis-ci = { repository = "emlun/gws2" }
